#40 Include user in auth response
